Fix layout bug

--- a/client/src/pages/layouts/MainLayout/MainLayout.scss
+++ b/client/src/pages/layouts/MainLayout/MainLayout.scss
@@ -44,6 +44,10 @@
         }
     }
 
+    &__content {
+        min-height: unset !important;
+    }
+
     @media screen and (min-width: 992px) {
         &__backdrop {
             display: none;
